Add autoflake for unused import removal

--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,4 @@ pygame==2.6.0  # ゲームコントローラー入力用
 ruff==0.5.0  # リンター & 未使用インポート検出
 black==24.4.0  # コードフォーマッター
 isort==5.13.2  # インポート整理
+autoflake==2.3.0  # 未使用インポート削除
